# ball-trajectory-node

./: README.md
ball-trajectory-node/: CMakeLists.txt  package.xml
ball-trajectory-node/src/: trajectory_node.cpp
ball_trajectory_planner/: CMakeLists.txt  package.xml
ball_trajectory_planner/cfg/: basic_trajectory.yaml
ball_trajectory_planner/src/: basic_trajectory.cpp  trajectory_node.cpp
